--- a/WebRoot/common/_layout.html
+++ b/WebRoot/common/_layout.html
@@ -1,22 +1,26 @@
 #define layout()
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xml:lang="zh-CN" xmlns="http://www.w3.org/1999/xhtml" lang="zh-CN">
+<!-- <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> -->
+<!-- <html xml:lang="zh-CN" xmlns="http://www.w3.org/1999/xhtml" lang="zh-CN"> -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html lang="en-gb" dir="ltr">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-<link href="/css/manage.css" media="screen" rel="stylesheet" type="text/css" />
-<script src="/js/jquery-1.4.4.min.js" type="text/javascript" ></script>
+<!-- <link href="/spider-server/css/uikit.css" media="screen" rel="stylesheet" type="text/css" /> -->
+<link rel="stylesheet" href="/spider-server/css/mui.min.css" />
+<script src="/spider-server/js/jquery-1.4.4.min.js" type="text/javascript" ></script>
+<script src="/spider-server/js/mui.min.js"></script>
+<script src="/spider-server/js/des.js" type="text/javascript" ></script>
 </head>
 <body>
-	<div class="manage_container">
+	<div class="manage_container" style="text-align:center;padding-top:8px">
 		<div class="manage_head">
-			<div class="manage_logo">
+			<!-- <div class="manage_logo">
 				<a href="http://www.jfinal.com" target="_blank">JFinal web framework</a>
-			</div>
+			</div> -->
 			<div id="nav">
-				<ul>
-					<li><a href="/"><b>首页</b></a></li>
-					<li><a href="/blog"><b>Blog管理</b></a></li>
-				</ul>
+				<a href="/spider-server/sd/sale"><b>当天预约号码</b></a>
+				<a href="/spider-server/cia/list"><b>指定提交号码</b></a>
+			
 			</div>
 		</div>
 		<div class="main">
