--- a/WebRoot/cia/_form.html
+++ b/WebRoot/cia/_form.html
@@ -17,7 +17,10 @@
 		<label>*营业厅：</label>
 		<input type="text" name="office_name" id="office_name"/>
 	</div>
-	
+	<div class="mui-input-row">
+		<label>*类型：</label>
+		<input type="text" name="type" id="type" value="1"/>
+	</div>
 	<div class="ui-button-row">
 		<!-- <input value="识别" type="button" onclick="reg()" class="mui-btn mui-btn-danger" ></input>
 		<input value="提交" type="submit" class="mui-btn mui-btn-primary"></input> -->
