--- a/WebRoot/common/_layout.html
+++ b/WebRoot/common/_layout.html
@@ -19,7 +19,7 @@
 			</div> -->
 			<div id="nav">
 				<a href="/spider-server/sd/sale"><b>当天预约号码</b></a>
-				<a href="/spider-server/cia/list"><b>指定提交号码</b></a>
+				<a href="/spider-server/sd/syn43"><b>同步当天的数据到43</b></a>
 			
 			</div>
 		</div>
